test/src/test/k3s/test/traefik/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
spec:
  replicas: 1
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: traefik
  template:
    metadata:
      labels:
        app.kubernetes.io/name: traefik
    spec:
      containers:
        - name: traefik
          image: ${image.traefik}
          imagePullPolicy: Never
          args:
            - --providers.file.filename=/k8s/config.toml
            - --providers.file.watch=false
            - --providers.kubernetesingress=true
            - --entrypoints.traefik.address=:8090
            - --entrypoints.http.address=:8080
            - --accesslog=true
            - --accesslog.format=json
            - --accesslog.fields.defaultmode=keep
            - --accesslog.fields.headers.defaultmode=keep
            - --ping=true
            - --api.insecure=true
            - --api.dashboard=true
            - --global.checknewversion=false
            - --global.sendAnonymousUsage=false
          ports:
            - name: http
              containerPort: 8080
              hostPort: 8080
            - name: admin
              containerPort: 8090
          startupProbe:
            httpGet:
              path: /ping
              port: admin
            initialDelaySeconds: 1
            periodSeconds: 1
            successThreshold: 1
            failureThreshold: 60
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            privileged: false
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
          volumeMounts:
            - name: config
              mountPath: /k8s/config.toml
              subPath: config.toml
              readOnly: true
      enableServiceLinks: false
      serviceAccountName: traefik
      terminationGracePeriodSeconds: 0
      volumes:
        - name: config
          configMap:
            name: traefik-config
